# IRPAPERS

./: LICENSE  README.md
mcp/: README.md  pyproject.toml  server.py
mcp/scripts/: test_query.py  test_startup.py
mcp/src/: config.py  query.py  startup.py  utils.py
notebooks/: load_from_hf.ipynb  pdf_to_base64.ipynb
